After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 595481 - Fix clang bugs
Fix clang bugs
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-09-17 16:05 UTC by Bastien Nocera
Modified: 2009-09-21 15:06 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove unused variable in screensaver plugin (1.22 KB, patch)
2009-09-17 16:05 UTC, Bastien Nocera
committed Details | Review
Remove unused retval (1.22 KB, patch)
2009-09-17 16:05 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2009-09-17 16:05:12 UTC
A few bugs spotted with clang
Comment 1 Bastien Nocera 2009-09-17 16:05:16 UTC
Created attachment 143366 [details] [review]
Remove unused variable in screensaver plugin
Comment 2 Bastien Nocera 2009-09-17 16:05:26 UTC
Created attachment 143367 [details] [review]
Remove unused retval
Comment 3 Bastien Nocera 2009-09-21 15:06:36 UTC
Attachment 143366 [details] pushed as c0c91eb - Remove unused variable in screensaver plugin
Attachment 143367 [details] pushed as b792db1 - Remove unused retval