Remove unused variable in screensaver plugin

https://bugzilla.gnome.org/show_bug.cgi?id=595481